<!-- copyrighted content owned by Android Arena (www.androidarena.co.in)-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="#9900CC"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/ic_launcher"
                tools:ignore="ContentDescription,RtlHardcoded" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="25dp"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp"

                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"

            android:layout_weight="1.26"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="InefficientWeight">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="133dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="0.20"
                android:background="@mipmap/plan"
                tools:ignore="ContentDescription,NestedWeights" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="173dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="106dp" />

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:textColor="#000000"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loginLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_registered_login"
                    android:textColor="#0066FF"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="190dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="13sp" />


        </LinearLayout>


    </LinearLayout>



</ScrollView>