<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textSize="20sp"
    tools:context="com.forexexpress.MainActivity"
    tools:ignore="GradleDependency">



    <Button
        android:id="@+id/BureauRankingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/reflected_gradient_effect3"
        android:text="@string/bureau_rankings"
        android:textStyle="bold"
        tools:ignore="HardcodedText"
        android:textColor="#fff"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/ConvertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/linear_gradient_light_to_dark_effect"
        android:text="@string/convert_currency"
        android:textColor="#fff"
        android:textStyle="bold"
        tools:ignore="HardcodedText,UnknownId"
        android:layout_above="@+id/textViewWelcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="64dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/LocateBureauButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/reflected_gradient_effect2"
        android:text="@string/locate_bureau"
        android:textColor="#fff"
        android:textStyle="bold"
        tools:ignore="HardcodedText"

        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#66FFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/firebaseView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewWelcome"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="Button" />


</RelativeLayout>
